--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,3 +1,14 @@
+.smallerimage{
+width:24%;
+height:13%;
+float:left;
+margin-right:3%;
+margin-bottom:2%;
+}
+p{
+line-height: 45px;
+}
+
 .header{
 height:10%;
 background:#ffffff;
@@ -125,6 +136,7 @@ height:auto;
 width:16%;
 text-align:center;
 background:white;
+clear: both;
 }
 input
     {
