--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -14,6 +14,26 @@ margin:0;
 background-image: url("../images/vintage-leaves.png");
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 color:#777777;
+
+}
+.portfolioimage{
+width:270px;
+height:180px;
+background-image: url("../images/PH1.jpg");
+background-size: cover;
+position: relative;
+
+}
+.bottomposition{
+    position:absolute;
+    bottom:10%;
+    width:100%;
+    text-align:center;
+    height: auto;
+    padding:5% 0% 5% 0%;
+    background:#4aaaa5 !important;
+    color:white !important;
+    font-size:20px;
 }
 .myName{
 position:absolute;
@@ -52,6 +72,7 @@ padding: 10px 0px 20px 0px;
 border-bottom-style: solid;
 border-bottom-color: #d3d3d3;
 border-bottom-width: 1px;
+text-align:left !important;
 }
 
 .rightmargin{
@@ -94,7 +115,6 @@ figure{
     padding-right:-10px;
     padding-left: -10px;
 }
-
 #box1{
 position:absolute;
 left:10%;
@@ -114,6 +134,7 @@ background:white;
    height:200px;
 
 }
+
 #box2{
 position:absolute;
 right:10%;
@@ -142,12 +163,17 @@ input-placeholder{
         color: rgba(0, 0, 0, 0.5);
 
 }
- #subbox{
+ .subbox{
+    display:flex;
+    justify-content:space-between;
+    float:left;
 }
-position: absolute;
-top:0%;
-border-bottom:solid;
-border-bottom-color: gray;
+.level2{
+   display: flex;
+   justify-content: space-around;
+   flex-direction: column;
+}
+
  }
   #subbox2{
 position: absolute;
